Implement RAG functionality with document parsing and chunking
- Added `llm.py` for handling language model interactions.
- Introduced `chunker.py` for splitting documents into manageable chunks.
- Created `dependencies.py` to manage embedding model retrieval.
- Developed `document_parser.py` for parsing and converting documents.
- Updated schemas for chat and RAG operations, including request and response models.
- Added error handling for document operations.
- Implemented caching for embedding model retrieval.

--- a/ai/pyproject.toml
+++ b/ai/pyproject.toml
@@ -9,8 +9,11 @@ dependencies = [
     "langchain>=1.2.10",
     "langchain-openai>=1.1.9",
     "langchain-postgres>=0.0.17",
+    "langchain-text-splitters>=1.1.1",
     "marker-pdf>=1.10.2",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.13.1",
+    "python-multipart>=0.0.22",
     "sentry-sdk[fastapi]>=2.53.0",
+    "uvicorn>=0.41.0",
 ]
