--- a/ai/pyproject.toml
+++ b/ai/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "marker-pdf>=1.10.2",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.13.1",
+    "psycopg[binary]>=3.2.10",
     "python-multipart>=0.0.22",
     "sentry-sdk[fastapi]>=2.53.0",
     "uvicorn>=0.41.0",
