--- a/ai/pyproject.toml
+++ b/ai/pyproject.toml
@@ -17,4 +17,5 @@ dependencies = [
     "python-multipart>=0.0.22",
     "sentry-sdk[fastapi]>=2.53.0",
     "uvicorn>=0.41.0",
+    "llama-parse>=0.6.94",
 ]
